fixed dropdown bug on iphone 6 screen width

--- a/css/app.css
+++ b/css/app.css
@@ -270,7 +270,7 @@ countdown
     }
     .top-bar ul {
         background-color: transparent;
-        margin-top: 23%;
+        margin-top: 20%;
         position: fixed;
         width: 100%;
         z-index: 4;
